[project]
name = "mcp-server-cygnus"
version = "0.6.2"
description = "A simple MCP server exposing Cygnus tools only (no database)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.4",
    "uvicorn>=0.34.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389"]

[project.scripts]
mcp-server-cygnus = "mcp_server_cygnus:main"
